Fin page prestation + mise en place des liens

--- a/prestation.html
+++ b/prestation.html
@@ -32,10 +32,11 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">FICHES CONSEIL</a></li>
-                    <li class="active"><a href="#">PRESTATION & TARIFS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="conseil.html">FICHES CONSEIL</a></li>
+                    <li class="active"><a href="prestation.html">PRESTATION & TARIFS</a></li>
+                    <li><a href="#">ESPACE VENTE</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
@@ -73,72 +74,108 @@
 
         <section id="navbar-prestation" class="row prestation">
 
-            <div id="consultation" class="col-md-offset-2 col-md-8">
+            <div id="consultation" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3>CONSULTATION</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+                    <small>À la différence de l'homme, nos compagnons ne parlent pas pendant la consultation, c'est à vous de bien noter les moindres signes ou changements et de nous en faire part.</small>
+                    <h4>La consultation vaccinale :</h4>
+                    <p>C'est LE rendez-vous annuel de votre compagnon chez le vétérinaire. En plus de l'injection des valences vaccinales, un examen de santé minutieux et complet sera toujours fait. C'est le moment de faire part de vos interrogations ou inquiétudes avec le docteur vétérinaire et l'occasion pour celui-ci de déceler toute anomalie concernant la santé de votre chien ou de votre chat. Il est important de vérifier l'état d'embonpoint, les yeux, les oreilles, les dents, la peau, la mobilité de votre animal, mais aussi la couleur des muqueuses, la fréquence cardiaque, effectuer une palpation des ganglions et des organes abdominaux... 
+                    N'hésitez pas lors de cette consultation à nous faire part de tout ce qui vous semble avoir changé à propos de votre compagnon.En effet, une baisse de forme ou d'appétit, une augmentation de la prise de boisson, peut vous sembler liée à son âge et non alarmant alors que ces indices pourraient nous orienter vers une pathologie plus ou moins grave.</p>
+
+                    <h4>La consultation dermatologique :</h4>
+                    <p>Elle peut être sollicitée lorsque l'animal présente des démangeaisons, rougeurs, croûtes, zones dépilées, possède un pelage gras ou nauséabond... Ce rendez-vous nécessite plus de temps qu'une consultation classique car votre vétérinaire effectuera le plus fréquement des prélèvements pour quelques examens complémentaires (microscope) afin de déceler la cause de ces symptômes.</p>
+
+                    <h4>La consultation ophtalmologique :</h4>
+                    <p>Un oeil rouge, qui pleure, purulent, fermé ou même gonflé necessite une consultation au plus vite. L'automédication est fortement déconseillée car si par exemple des corticoïdes sont appliqués sur un ulcère de la cornée, votre animal peut définitivement perdre la vue. Votre docteur vétérinaire est là pour vous prescrire un traitement adapté et sans risque.</p>
+
+                    <h4>La consultation cardiologique :</h4>
+                    <p>Votre animal vous semble plus essouflé qu'à l'ordinaire? Il se met à tousser lors d'ennervement ou excitation? Il est possible qu'il ait un trouble cardiaque. Désormais la médecine vétérinaire possède divers traitements faciles à administrer et très bien tolérés. Ces derniers peuvent être mis en place à long terme pour soutenir votre compagnon et allonger son espérance de vie. Lors de cette consultation une radiographie est souvent effectuée afin entre autres, d'observer la taille du coeur de votre chien ou de votre chat. Une fois le traitement mis en place, des bilans sanguins vous seront proposés régulièrement pour vérifier que le traitement est bien suporté par votre compagnon.</p>
                 </div>
             </div>
 
-            <div id="imagerie" class="col-md-offset-2 col-md-8">
+            <div id="imagerie" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>IMAGERIE</h3>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
+                    <h4>L'imagerie c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
-            <div id="analyse" class="col-md-offset-2 col-md-8">
+            <div id="analyse" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>Analyse sanguine</h3>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
+                    <h4>Les analyses sanguines c'est top !</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+
+                    <h4>Les analyses sanguines c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
-            <div id="chirurgie" class="col-md-offset-2 col-md-8">
+            <div id="chirurgie" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>CHIRURGIE</h3>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
+                    <h4>La chirurgie c'est top !</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+
+                    <h4>La chirurgie c'est top !</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+
+                    <h4>La chirurgie c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
-            <div id="hospitalisation" class="col-md-offset-2 col-md-8">
+            <div id="hospitalisation" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>HOSPITALISATION</h3>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
+                    <h4>L'hospitalisation c'est top !</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+
+                    <h4>L'hospitalisation c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
-            <div id="nac" class="col-md-offset-2 col-md-8">
+            <div id="nac" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>NAC</h3>
+                    <small>Les nouveaux animaux de compagnies.</small>
+                    <h4>Les nacs c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
 
-            <div id="tarifs" class="col-md-offset-2 col-md-8">
+            <div id="tarifs" class="col-md-offset-2 col-md-8 article-prestation">
                 <div class="col-md-4">
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3>Titre</h3>
+                    <h3>Tarifs</h3>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
+                    <h4>Lorem Impsoum !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
