Mise en place d'un bouton retour en haut sur la nav prestation

--- a/prestation.html
+++ b/prestation.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div id="nav" class="container-fluid">
         <!-- menu de navigation -->
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
@@ -32,7 +32,7 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index.html">ACCUEIL</a></li>
                     <li><a href="conseil.html">FICHES CONSEIL</a></li>
                     <li class="active"><a href="prestation.html">PRESTATION & TARIFS</a></li>
                     <li><a href="#">ESPACE VENTE</a></li>
@@ -68,6 +68,7 @@
                 <a href="#hospitalisation"><i class="fa fa-2x fa-hospital-o"></i></a>
                 <a href="#nac"><i class="fa fa-2x fa-paw"></i></a>
                 <a href="#tarifs"><i class="fa fa-2x fa-eur"></i></a>
+                <a href="#nav"><i class="fa fa-2x fa-arrow-circle-up"></i></a>
             </div>
         </nav>
         <!--<div class="separator-objet"></div>-->
@@ -206,10 +207,11 @@
 
             <div class="bloc-footer col-md-4">
                     <p>123 Véto :</p>
-                    <p><a href="#">Accueil</a></p>
-                    <p><a href="#">Fiches conseil</a></p>
-                    <p><a href="#">Prestation & tarifs</a></p>
-                    <p><a href="#">Contact & rendez-vous</a></p>
+                    <p><a href="index.html">Accueil</a></p>
+                    <p><a href="conseil.html">Fiches conseil</a></p>
+                    <p><a href="prestation.html">Prestation & tarifs</a></p>
+                    <p><a href="#">Espace vente</a></p>
+                    <p><a href="contact.html">Contact & rendez-vous</a></p>
                     <p><a href="#">Mentions légales</a></p>
             </div>
     </footer>
