ajout scroll fluid en js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/navbar-transparent.js"></script>
+    <script type="text/javascript" src="js/scroll-fluid.js"></script>
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/font-awesome.css" />
