--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li class="active"><a href="#">HOME</a></li>
-                    <li><a href="#">FICHES CONSEIL</a></li>
-                    <li><a href="#">PRESTATION & TARIFS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="index.html">ACCUEIL</a></li>
+                    <li><a href="conseil.html">FICHES CONSEIL</a></li>
+                    <li class="active"><a href="prestation.html">PRESTATION & TARIFS</a></li>
+                    <li><a href="#">ESPACE VENTE</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
