--- a/conseil.html
+++ b/conseil.html
@@ -31,8 +31,8 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
                     <li><a href="index.html">ACCUEIL</a></li>
-                    <li><a href="conseil.html">FICHES CONSEIL</a></li>
-                    <li class="active"><a href="prestation.html">PRESTATION & TARIFS</a></li>
+                    <li class="active"><a href="conseil.html">FICHES CONSEIL</a></li>
+                    <li><a href="prestation.html">PRESTATION & TARIFS</a></li>
                     <li><a href="#">ESPACE VENTE</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
