ajout hover fluid sur les icones de presentation.html

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 <h2 class="text-center text-capitalize">Notre équipe</h2>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive img-circle avatar" src="http://lorempicsum.com/rio/400/400/1" alt="">
+                <img class="img-responsive img-circle avatar" src="images/example-01.jpg" alt="">
             </div>
             <div class="col-md-6">
-                <img class="img-responsive img-circle avatar" src="http://lorempicsum.com/rio/400/400/1" alt="">
+                <img class="img-responsive img-circle avatar" src="images/veto.jpg" alt="">
             </div>
             <p class="text-center col-md-4 col-md-offset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, dolor libero nisi odit? Ullam voluptatibus maiores architecto obcaecati. Quo sed amet sequi veritatis quaerat, earum asperiores inventore molestiae aut quod.</p>
             <p class="text-center col-md-4 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, dolor libero nisi odit? Ullam voluptatibus maiores architecto obcaecati. Quo sed amet sequi veritatis quaerat, earum asperiores inventore molestiae aut quod.</p>
