Recalage du pinou sur prestation

--- a/prestation.html
+++ b/prestation.html
@@ -189,8 +189,7 @@
         <!-- pied de page -->
         <footer class="row">
             <div class="bloc-footer col-md-4">
-                <p>
-                    123 Véto clinique vétérinaire vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p><p>Les urgences sont assurées 24h/24 sur simple appel téléphonique.</p><p>tél : 02 99 55 55 55 - 06 55 55 55 55</p>
+                <p>123 Véto clinique vétérinaire vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p><p>Les urgences sont assurées 24h/24 sur simple appel téléphonique.</p><p>tél : 02 99 55 55 55 - 06 55 55 55 55</p>
                 </p>
 
                 <p>
@@ -203,7 +202,8 @@
             </div>
 
             <div class="bloc-footer col-md-4">
-                <p>Fil d'actualitées à gérer en Javascript</p>
+                <p>Actualités</p>
+                <div class="separator-header"></div>
             </div>
 
             <div class="bloc-footer col-md-4">
