--- a/prestation.html
+++ b/prestation.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="css/font-awesome.css"/>
 </head>
 
-<body>
-    <div id="nav" class="container-fluid">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <div class="container-fluid">
         <!-- menu de navigation -->
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav id="nav" class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
