Mise en place du footer

--- a/prestation.html
+++ b/prestation.html
@@ -189,30 +189,42 @@
         <!-- pied de page -->
         <footer class="row">
             <div class="bloc-footer col-md-4">
+                <H4>Contact</H4>
+                <div class="separator-footer"></div>
                 <p>123 Véto clinique vétérinaire vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p><p>Les urgences sont assurées 24h/24 sur simple appel téléphonique.</p><p>tél : 02 99 55 55 55 - 06 55 55 55 55</p>
                 </p>
 
                 <p>
                 <a href="https://www.facebook.com/"><i class="fa fa-2x fa-facebook icone-prestation"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-2x fa-twitter icone-prestation"></i></a>
-                <a href="https://plus.google.com/"><i class="fa fa-2x fa-google-plus-official icone-prestation"></i></a>
+                <a href="https://plus.google.com/"><i class="fa fa-2x fa-google-plus-official icone-prestation"></i></a></p>
+                <button type="button" class="btn btn-default  center-block">Plan d'accès</button>
+            </div>
+
+            <div class="bloc-footer col-md-4">
+                <h4>Actualités</h4>
+                <div class="separator-footer"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 </p>
-
-                <button type="button" class="btn btn-default">Plan d'accès</button>
+                <div class="separator-footer"></div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                </p>
+                <div class="separator-footer"></div>
+                <button type="button" class="btn btn-default center-block">Suivant</button>
             </div>
 
             <div class="bloc-footer col-md-4">
-                <p>Actualités</p>
-                <div class="separator-header"></div>
-            </div>
-
-            <div class="bloc-footer col-md-4">
-                    <p>123 Véto :</p>
+                    <h4>123 Véto :</h4>
+                    <div class="separator-footer"></div>
                     <p><a href="index.html">Accueil</a></p>
                     <p><a href="conseil.html">Fiches conseil</a></p>
                     <p><a href="prestation.html">Prestation & tarifs</a></p>
                     <p><a href="#">Espace vente</a></p>
                     <p><a href="contact.html">Contact & rendez-vous</a></p>
+                    <div class="separator-footer"></div>
                     <p><a href="#">Mentions légales</a></p>
             </div>
     </footer>
