--- a/conseil.html
+++ b/conseil.html
@@ -63,13 +63,13 @@
         <nav class="row nav-prestations">
             <div class="col-md-1 col-xs-1">
                 <a href="#dent"><i class="fa fa-2x fa-stethoscope"></i></a>
-                <a href="#yeux-oreilles"><i class="fa fa-2x fa-camera"></i></a>
-                <a href="#pelage"><i class="fa fa-2x fa-medkit"></i></a>
+                <a href="#yeux-oreilles"><i class="fa fa-2x fa-eye"></i></a>
+                <a href="#pelage"><i class="fa fa-2x fa-paw"></i></a>
                 <a href="#parasite"><i class="fa fa-2x fa-bug"></i></a>
                 <a href="#vaccin-chien"><i class="fa fa-2x fa-hospital-o"></i></a>
-                <a href="#vaccin-chat"><i class="fa fa-2x fa-paw"></i></a>
-                <a href="#id"><i class="fa fa-2x fa-eur"></i></a>
-                <a href="#education"><i class="fa fa-2x fa-heartbeat"></i></a>
+                <a href="#vaccin-chat"><i class="fa fa-2x fa-medkit"></i></a>
+                <a href="#id"><i class="fa fa-2x fa-info-circle"></i></a>
+                <a href="#education"><i class="fa fa-2x fa-book"></i></a>
                 <a href="#nav"><i class="fa fa-2x fa-arrow-circle-up"></i></a>
             </div>
         </nav>
@@ -92,7 +92,7 @@
                     <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-camera"></i> Hygiène des yeux et des oreilles</h3>
+                    <h3><i class="fa fa-eye"></i> Hygiène des yeux et des oreilles</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-medkit"></i> Entretien du pelage</h3>
+                    <h3><i class="fa fa-paw"></i> Entretien du pelage</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-paw"></i> Pourquoi vacciner votre chat ?</h3>
+                    <h3><i class="fa fa-medkit"></i> Pourquoi vacciner votre chat ?</h3>
                     <small>Les nouveaux animaux de compagnies.</small>
                     <h4>Les nacs c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -144,7 +144,7 @@
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-eur"></i> Pourquoi et comment faire identifier vos animaux ?</h3>
+                    <h3><i class="fa fa-info-circle"></i> Pourquoi et comment faire identifier vos animaux ?</h3>
                     <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                     <h4>Lorem Impsoum !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
@@ -156,7 +156,7 @@
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-stethoscope"></i> Éducation</h3>
+                    <h3><i class="fa fa-book"></i> Éducation</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
