Bug nav link done with 'onclick js'

--- a/conseil.html
+++ b/conseil.html
@@ -30,11 +30,11 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li><a href="index.html">ACCUEIL</a></li>
-                    <li class="active"><a href="conseil.html">FICHES CONSEIL</a></li>
-                    <li><a href="prestation.html">PRESTATION & TARIFS</a></li>
-                    <li><a href="#">ESPACE VENTE</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="index.html" onclick="location.href='index.html';">ACCUEIL</a></li>
+                    <li class="active"><a href="conseil.html" onclick="location.href='conseil.html';">FICHES CONSEIL</a></li>
+                    <li><a href="prestation.html" onclick="location.href='prestation.html';">PRESTATION & TARIFS</a></li>
+                    <li><a href="#" onclick="location.href='#';">ESPACE VENTE</a></li>
+                    <li><a href="contact.html" onclick="location.href='contact.html';">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
