--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
+                    <a class="navbar-brand" href="#" onclick="window.open(this.href);return true;"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li class="active"><a href="index.html">ACCUEIL</a></li>
-                    <li><a href="conseil.html">FICHES CONSEIL</a></li>
-                    <li><a href="prestation.html">PRESTATION & TARIFS</a></li>
-                    <li><a href="#">ESPACE VENTE</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li class="active"><a href="index.html" onclick="location.href='index.html';">ACCUEIL</a></li>
+                    <li><a href="conseil.html" onclick="location.href='conseil.html';">FICHES CONSEIL</a></li>
+                    <li><a href="prestation.html" onclick="location.href='prestation.html';">PRESTATION & TARIFS</a></li>
+                    <li><a href="#" onclick="location.href='#';">ESPACE VENTE</a></li>
+                    <li><a href="contact.html" onclick="location.href='contact.html';">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
