change fa conseil + change class=active contact

--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li class="active"><a href="#">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
                     <li><a href="#">FICHES CONSEIL</a></li>
                     <li><a href="#">PRESTATION & TARIFS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li class="active"><a href="#">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
