--- a/conseil.html
+++ b/conseil.html
@@ -62,11 +62,11 @@
 
         <nav class="row nav-prestations">
             <div class="col-md-1 col-xs-1">
-                <a href="#dent"><i class="fa fa-2x fa-stethoscope"></i></a>
+                <a href="#dent"><i class="fa fa-2x fa-user-md"></i></a>
                 <a href="#yeux-oreilles"><i class="fa fa-2x fa-eye"></i></a>
                 <a href="#pelage"><i class="fa fa-2x fa-paw"></i></a>
                 <a href="#parasite"><i class="fa fa-2x fa-bug"></i></a>
-                <a href="#vaccin-chien"><i class="fa fa-2x fa-hospital-o"></i></a>
+                <a href="#vaccin-chien"><i class="fa fa-2x fa-plus-square"></i></a>
                 <a href="#vaccin-chat"><i class="fa fa-2x fa-medkit"></i></a>
                 <a href="#id"><i class="fa fa-2x fa-info-circle"></i></a>
                 <a href="#education"><i class="fa fa-2x fa-book"></i></a>
@@ -82,7 +82,7 @@
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-stethoscope"></i> Hygiène dentaire</h3>
+                    <h3><i class="fa fa-user-md"></i> Hygiène dentaire</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
-                    <h3><i class="fa fa-hospital-o"></i> Pourquoi vacciner votre chien ?</h3>
+                    <h3><i class="fa fa-plus-square"></i> Pourquoi vacciner votre chien ?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -133,8 +133,6 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-medkit"></i> Pourquoi vacciner votre chat ?</h3>
-                    <small>Les nouveaux animaux de compagnies.</small>
-                    <h4>Les nacs c'est top !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
@@ -145,8 +143,6 @@
                 </div>
                 <div class="col-md-8">
                     <h3><i class="fa fa-info-circle"></i> Pourquoi et comment faire identifier vos animaux ?</h3>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
-                    <h4>Lorem Impsoum !</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
                 </div>
             </div>
