--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         </header>
         
         <div class="row text-center section-header">
-            <h2>NOUS CONTACTER</h2>
+            <h2 id="startchange">NOUS CONTACTER</h2>
         </div>
         
         <div class="row">
