--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
                     <li><a href="index.html">ACCUEIL</a></li>
                     <li><a href="conseil.html">FICHES CONSEIL</a></li>
-                    <li class="active"><a href="prestation.html">PRESTATION & TARIFS</a></li>
+                    <li><a href="prestation.html">PRESTATION & TARIFS</a></li>
                     <li><a href="#">ESPACE VENTE</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li class="active"><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
