--- a/prestation.html
+++ b/prestation.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" href="css/font-awesome.css"/>
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body id="nav"" data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="container-fluid">
         <!-- menu de navigation -->
-        <nav id="nav" class="navbar navbar-default navbar-fixed-top container-fluid">
+        <nav class="navbar navbar-default navbar-fixed-top container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
@@ -189,15 +189,15 @@
             <div class="bloc-footer col-md-4">
                 <H4>Contact</H4>
                 <div class="separator-footer"></div>
-                <p>123 Véto clinique vétérinaire vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h.</p><p>Les urgences sont assurées 24h/24 sur simple appel téléphonique.</p><p>tél : 02 99 55 55 55 - 06 55 55 55 55</p>
+                <p>123 Véto clinique vétérinaire vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h. <a href="contact.html"><i class="fa fa-1x fa-map"></i></a></p><p>Les urgences sont assurées 24h/24 sur simple appel téléphonique.</p><p>tél : 02 99 55 55 55 - 06 55 55 55 55</p>
                 </p>
 
                 <p>
                 <a href="https://www.facebook.com/"><i class="fa fa-2x fa-facebook icone-prestation"></i></a>
                 <a href="https://twitter.com/"><i class="fa fa-2x fa-twitter icone-prestation"></i></a>
                 <a href="https://plus.google.com/"><i class="fa fa-2x fa-google-plus-official icone-prestation"></i></a></p>
-                <button type="button" class="btn btn-default  center-block">Plan d'accès</button>
-            </div>
+
+                </div>
 
             <div class="bloc-footer col-md-4">
                 <h4>Actualités</h4>
@@ -210,8 +210,12 @@
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                 </p>
+                <p><i class="fa fa-2x fa-chevron-circle-left" aria-hidden="true"></i>
+                <i class="fa fa-2x fa-chevron-circle-right" aria-hidden="true"></i></p>
                 <div class="separator-footer"></div>
-                <button type="button" class="btn btn-default center-block">Suivant</button>
+
+
+
             </div>
 
             <div class="bloc-footer col-md-4">
@@ -225,7 +229,7 @@
                     <div class="separator-footer"></div>
 
                     <!-- Button mentions légales -->
-                    <button type="button" class="btn btn-default center-block" data-toggle="modal" data-target="#myModal">Mentions légales</button>
+                    <button type="button" class="btn btn-default center-block btn-sm" data-toggle="modal" data-target="#myModal">Mentions légales</button>
 
                     <!-- form mentions légales -->
                 <div class="modal " id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
