retouche du bouton envoyer de contact !

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <input id="mail" type="email" name="mail" class="form-control"/><br/>
                 <label for="message">Votre message:</label><br/>
                 <textarea id="message" name="message" rows="15" cols="40" class="form-control"></textarea><br/>
-                <input type="submit" value="Envoyer!"/>
+                <input type="submit" value="Envoyer" class="btn btn-default center-block"/>
             </form>
             
         </div>
