Ajout logo responsive partoutgit add *git add *!

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,9 @@
 
         <!-- en-tête du site -->
         <header class="row">
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="images/logo-veto.svg" alt="" class="img-responsive">
+            </div>
 
             <h1>123 VETO - Clinique Vétérinaire</h1>
 
